# confluentia-hackathon

./: LICENSE  PROBLEM-STATEMENT.md  README.md  copilot_memory.db  main.py  pyproject.toml
src/: config.py
src/core/: agents.py  graph.py  memory.py
src/models/: gemini.py
src/prompts/: __init__.py
src/tools/: python_executor.py
src/utils/: db_connector.py  logging.py
src/web/: app.py  handlers.py  run.py  state.py
src/web/components/: agent_tracker.py  sidebar.py  visualization.py
